backport of fix

BUG: 276568 

svn path=/branches/KDE/4.7/kdeutils/kcalc/; revision=1240127